CompiladoC++/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASM
    ATOI
    BOOL
    CALLOC
    CATCH
    CERR
    CIN
    CLASS
    CONST_CAST
    COUT
    DELETE
    DEREF
    DEREF_ONE
    DEREF_TWO
    DO
    DYNAMIC_CAST
    ENUM
    EXIT
    EXPLICIT
    EXPORT
    FALSE
    FOR
    FRIEND
    GETS
    HASH
    INCLUDE
    INLINE
    KEYWORD
    LSHIFT_EQ
    MALLOC
    MUTABLE
    NAMESPACE
    NEW
    OPERATOR
    PREDEFINED_FUNCTION
    PRIVATE
    PROTECTED
    PUBLIC
    PUTS
    REALLOC
    REINTERPRET_CAST
    RSHIFT_EQ
    STATIC_CAST
    STD
    STRUCT
    TEMPLATE
    THIS
    THROW
    TRUE
    TRY
    TYPEID
    TYPENAME
    UNION
    USING
    VIRTUAL
    WCHAR_T
    WHILE

Grammar

Rule 0     S' -> mainFunc
Rule 1     mainFunc -> INT MAIN LPAREN RPAREN statement
Rule 2     expression -> assignmentExpression
Rule 3     expression -> expression COMMA assignmentExpression
Rule 4     assignmentExpression -> conditionalExpression
Rule 5     assignmentExpression -> unaryExpression assignOper assignmentExpression
Rule 6     unaryExpression -> postfixExpression
Rule 7     unaryExpression -> PLUSPLUS unaryExpression
Rule 8     unaryExpression -> MINUSMINUS unaryExpression
Rule 9     unaryExpression -> unaryOper unaryExpression
Rule 10    unaryExpression -> SIZEOF unaryExpression
Rule 11    unaryExpression -> SIZEOF LPAREN simpleTypeName RPAREN
Rule 12    primaryExpression -> markid
Rule 13    primaryExpression -> constant
Rule 14    primaryExpression -> markstr STRING
Rule 15    primaryExpression -> LPAREN expression RPAREN
Rule 16    markid -> identifier
Rule 17    markstr -> <empty>
Rule 18    postfixExpression -> primaryExpression
Rule 19    postfixExpression -> postfixExpression LEFTSQRBRACKET expression RIGHTSQRBRACKET
Rule 20    postfixExpression -> postfixExpression PLUSPLUS
Rule 21    postfixExpression -> postfixExpression MINUSMINUS
Rule 22    constant -> markint INTNUM
Rule 23    constant -> markfloat FLOATNUM
Rule 24    constant -> markchar CHAR_CONST
Rule 25    markint -> empty
Rule 26    markfloat -> empty
Rule 27    markchar -> empty
Rule 28    assignOper -> ASSIGNMENT
Rule 29    assignOper -> MULT_EQ
Rule 30    assignOper -> DIVIDE_EQ
Rule 31    assignOper -> MOD_EQ
Rule 32    assignOper -> PLUS_EQ
Rule 33    assignOper -> MINUS_EQ
Rule 34    assignOper -> GTEQ
Rule 35    assignOper -> LTEQ
Rule 36    assignOper -> AND_EQ
Rule 37    assignOper -> XOR_EQ
Rule 38    assignOper -> OR_EQ
Rule 39    conditionalExpression -> logicalOrExpression
Rule 40    conditionalExpression -> logicalOrExpression QUES_MARK expression COLON conditionalExpression
Rule 41    logicalOrExpression -> logicalAndExpression
Rule 42    logicalOrExpression -> logicalOrExpression OR logicalAndExpression
Rule 43    logicalAndExpression -> inclusiveOrExpression
Rule 44    logicalAndExpression -> logicalAndExpression AND inclusiveOrExpression
Rule 45    inclusiveOrExpression -> exclusiveOrExpression
Rule 46    inclusiveOrExpression -> inclusiveOrExpression BIT_OR exclusiveOrExpression
Rule 47    exclusiveOrExpression -> andExpression
Rule 48    exclusiveOrExpression -> exclusiveOrExpression BIT_XOR andExpression
Rule 49    andExpression -> equalityExpression
Rule 50    andExpression -> andExpression BIT_AND equalityExpression
Rule 51    equalityExpression -> relationalExpression
Rule 52    equalityExpression -> equalityExpression EQUAL relationalExpression
Rule 53    equalityExpression -> equalityExpression NEQUAL relationalExpression
Rule 54    relationalExpression -> shiftExpression
Rule 55    relationalExpression -> relationalExpression LT shiftExpression
Rule 56    relationalExpression -> relationalExpression GT shiftExpression
Rule 57    relationalExpression -> relationalExpression LTEQ shiftExpression
Rule 58    relationalExpression -> relationalExpression GTEQ shiftExpression
Rule 59    shiftExpression -> additiveExpression
Rule 60    shiftExpression -> shiftExpression LSHIFT additiveExpression
Rule 61    shiftExpression -> shiftExpression RSHIFT additiveExpression
Rule 62    additiveExpression -> multiplicativeExpression
Rule 63    additiveExpression -> additiveExpression U_PLUS multiplicativeExpression
Rule 64    additiveExpression -> additiveExpression U_MINUS multiplicativeExpression
Rule 65    multiplicativeExpression -> castExpression
Rule 66    multiplicativeExpression -> multiplicativeExpression TIMES castExpression
Rule 67    multiplicativeExpression -> multiplicativeExpression DIVIDE castExpression
Rule 68    multiplicativeExpression -> multiplicativeExpression MOD castExpression
Rule 69    castExpression -> unaryExpression
Rule 70    castExpression -> LPAREN simpleTypeName RPAREN castExpression
Rule 71    unaryOper -> TIMES
Rule 72    unaryOper -> BIT_AND
Rule 73    unaryOper -> U_PLUS
Rule 74    unaryOper -> U_MINUS
Rule 75    unaryOper -> NOT
Rule 76    unaryOper -> BIT_NOT
Rule 77    simpleTypeName -> CHAR
Rule 78    simpleTypeName -> SHORT
Rule 79    simpleTypeName -> INT
Rule 80    simpleTypeName -> LONG
Rule 81    simpleTypeName -> SIGNED
Rule 82    simpleTypeName -> UNSIGNED
Rule 83    simpleTypeName -> FLOAT
Rule 84    simpleTypeName -> DOUBLE
Rule 85    simpleTypeName -> VOID
Rule 86    empty -> <empty>
Rule 87    statement -> labeledStatement
Rule 88    statement -> expressionStatement
Rule 89    statement -> compoundStatement
Rule 90    statement -> selectionStatement
Rule 91    statement -> jumpStatement
Rule 92    labeledStatement -> identifier COLON statement
Rule 93    labeledStatement -> caseList default
Rule 94    caseList -> caseList CASE constantExpression COLON statement
Rule 95    caseList -> empty
Rule 96    default -> DEFAULT defaultmark COLON statement enddefault
Rule 97    default -> empty
Rule 98    defaultmark -> empty
Rule 99    enddefault -> empty
Rule 100   constantExpression -> conditionalExpression
Rule 101   expressionStatement -> expression TERMINAL
Rule 102   expressionStatement -> empty
Rule 103   compoundStatement -> oscope declarationList statementList cscope
Rule 104   compoundStatement -> empty
Rule 105   oscope -> LEFTCURLYBRACKET
Rule 106   cscope -> RIGHTCURLYBRACKET
Rule 107   statementList -> statementList statement
Rule 108   statementList -> empty
Rule 109   declarationList -> declarationList declaration
Rule 110   declarationList -> empty
Rule 111   declaration -> decSpecList initDecList TERMINAL
Rule 112   initDecList -> initDecList COMMA markDec initDec
Rule 113   initDecList -> initDec
Rule 114   markDec -> empty
Rule 115   decSpecList -> decSpecList decSpec
Rule 116   decSpecList -> decSpec
Rule 117   initDec -> declarator
Rule 118   initDec -> declarator ASSIGNMENT assignmentExpression
Rule 119   declarator -> pointerList directDec
Rule 120   pointerList -> pointer
Rule 121   pointerList -> empty
Rule 122   pointer -> star typeQualList
Rule 123   pointer -> empty
Rule 124   star -> star TIMES
Rule 125   star -> TIMES
Rule 126   typeQualList -> typeQualifier
Rule 127   typeQualList -> empty
Rule 128   directDec -> identifier
Rule 129   directDec -> identifier arrayDec
Rule 130   arrayDec -> arrayDec LEFTSQRBRACKET INTNUM RIGHTSQRBRACKET
Rule 131   arrayDec -> LEFTSQRBRACKET INTNUM RIGHTSQRBRACKET
Rule 132   identifier -> ID
Rule 133   decSpec -> StorageClassSpec
Rule 134   decSpec -> simpleTypeName
Rule 135   decSpec -> typeQualifier
Rule 136   typeQualifier -> CONST
Rule 137   typeQualifier -> VOLATILE
Rule 138   StorageClassSpec -> AUTO
Rule 139   StorageClassSpec -> REGISTER
Rule 140   StorageClassSpec -> STATIC
Rule 141   StorageClassSpec -> EXTERN
Rule 142   StorageClassSpec -> TYPEDEF
Rule 143   selectionStatement -> IF LPAREN ifmark expression RPAREN statement endifmark
Rule 144   selectionStatement -> IF LPAREN ifmark expression RPAREN statement endifmark ELSE elsemark statement
Rule 145   selectionStatement -> SWITCH LPAREN switchmark expression RPAREN statement endswitchmark
Rule 146   ifmark -> empty
Rule 147   endifmark -> empty
Rule 148   elsemark -> empty
Rule 149   switchmark -> empty
Rule 150   endswitchmark -> empty
Rule 151   jumpStatement -> BREAK TERMINAL
Rule 152   jumpStatement -> CONTINUE TERMINAL
Rule 153   jumpStatement -> RETURN expression TERMINAL
Rule 154   jumpStatement -> RETURN TERMINAL
Rule 155   jumpStatement -> GOTO identifier TERMINAL

Terminals, with rules where they appear

AND                  : 44
AND_EQ               : 36
ASM                  : 
ASSIGNMENT           : 28 118
ATOI                 : 
AUTO                 : 138
BIT_AND              : 50 72
BIT_NOT              : 76
BIT_OR               : 46
BIT_XOR              : 48
BOOL                 : 
BREAK                : 151
CALLOC               : 
CASE                 : 94
CATCH                : 
CERR                 : 
CHAR                 : 77
CHAR_CONST           : 24
CIN                  : 
CLASS                : 
COLON                : 40 92 94 96
COMMA                : 3 112
CONST                : 136
CONST_CAST           : 
CONTINUE             : 152
COUT                 : 
DEFAULT              : 96
DELETE               : 
DEREF                : 
DEREF_ONE            : 
DEREF_TWO            : 
DIVIDE               : 67
DIVIDE_EQ            : 30
DO                   : 
DOUBLE               : 84
DYNAMIC_CAST         : 
ELSE                 : 144
ENUM                 : 
EQUAL                : 52
EXIT                 : 
EXPLICIT             : 
EXPORT               : 
EXTERN               : 141
FALSE                : 
FLOAT                : 83
FLOATNUM             : 23
FOR                  : 
FRIEND               : 
GETS                 : 
GOTO                 : 155
GT                   : 56
GTEQ                 : 34 58
HASH                 : 
ID                   : 132
IF                   : 143 144
INCLUDE              : 
INLINE               : 
INT                  : 1 79
INTNUM               : 22 130 131
KEYWORD              : 
LEFTCURLYBRACKET     : 105
LEFTSQRBRACKET       : 19 130 131
LONG                 : 80
LPAREN               : 1 11 15 70 143 144 145
LSHIFT               : 60
LSHIFT_EQ            : 
LT                   : 55
LTEQ                 : 35 57
MAIN                 : 1
MALLOC               : 
MINUSMINUS           : 8 21
MINUS_EQ             : 33
MOD                  : 68
MOD_EQ               : 31
MULT_EQ              : 29
MUTABLE              : 
NAMESPACE            : 
NEQUAL               : 53
NEW                  : 
NOT                  : 75
OPERATOR             : 
OR                   : 42
OR_EQ                : 38
PLUSPLUS             : 7 20
PLUS_EQ              : 32
PREDEFINED_FUNCTION  : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUTS                 : 
QUES_MARK            : 40
REALLOC              : 
REGISTER             : 139
REINTERPRET_CAST     : 
RETURN               : 153 154
RIGHTCURLYBRACKET    : 106
RIGHTSQRBRACKET      : 19 130 131
RPAREN               : 1 11 15 70 143 144 145
RSHIFT               : 61
RSHIFT_EQ            : 
SHORT                : 78
SIGNED               : 81
SIZEOF               : 10 11
STATIC               : 140
STATIC_CAST          : 
STD                  : 
STRING               : 14
STRUCT               : 
SWITCH               : 145
TEMPLATE             : 
TERMINAL             : 101 111 151 152 153 154 155
THIS                 : 
THROW                : 
TIMES                : 66 71 124 125
TRUE                 : 
TRY                  : 
TYPEDEF              : 142
TYPEID               : 
TYPENAME             : 
UNION                : 
UNSIGNED             : 82
USING                : 
U_MINUS              : 64 74
U_PLUS               : 63 73
VIRTUAL              : 
VOID                 : 85
VOLATILE             : 137
WCHAR_T              : 
WHILE                : 
XOR_EQ               : 37
error                : 

Nonterminals, with rules where they appear

StorageClassSpec     : 133
additiveExpression   : 59 60 61 63 64
andExpression        : 47 48 50
arrayDec             : 129 130
assignOper           : 5
assignmentExpression : 2 3 5 118
caseList             : 93 94
castExpression       : 65 66 67 68 70
compoundStatement    : 89
conditionalExpression : 4 40 100
constant             : 13
constantExpression   : 94
cscope               : 103
decSpec              : 115 116
decSpecList          : 111 115
declaration          : 109
declarationList      : 103 109
declarator           : 117 118
default              : 93
defaultmark          : 96
directDec            : 119
elsemark             : 144
empty                : 25 26 27 95 97 98 99 102 104 108 110 114 121 123 127 146 147 148 149 150
enddefault           : 96
endifmark            : 143 144
endswitchmark        : 145
equalityExpression   : 49 50 52 53
exclusiveOrExpression : 45 46 48
expression           : 3 15 19 40 101 143 144 145 153
expressionStatement  : 88
identifier           : 16 92 128 129 155
ifmark               : 143 144
inclusiveOrExpression : 43 44 46
initDec              : 112 113
initDecList          : 111 112
jumpStatement        : 91
labeledStatement     : 87
logicalAndExpression : 41 42 44
logicalOrExpression  : 39 40 42
mainFunc             : 0
markDec              : 112
markchar             : 24
markfloat            : 23
markid               : 12
markint              : 22
markstr              : 14
multiplicativeExpression : 62 63 64 66 67 68
oscope               : 103
pointer              : 120
pointerList          : 119
postfixExpression    : 6 19 20 21
primaryExpression    : 18
relationalExpression : 51 52 53 55 56 57 58
selectionStatement   : 90
shiftExpression      : 54 55 56 57 58 60 61
simpleTypeName       : 11 70 134
star                 : 122 124
statement            : 1 92 94 96 107 143 144 144 145
statementList        : 103 107
switchmark           : 145
typeQualList         : 122
typeQualifier        : 126 135
unaryExpression      : 5 7 8 9 10 69
unaryOper            : 9

Parsing method: LALR

state 0

    (0) S' -> . mainFunc
    (1) mainFunc -> . INT MAIN LPAREN RPAREN statement

    INT             shift and go to state 2

    mainFunc                       shift and go to state 1

state 1

    (0) S' -> mainFunc .



state 2

    (1) mainFunc -> INT . MAIN LPAREN RPAREN statement

    MAIN            shift and go to state 3


state 3

    (1) mainFunc -> INT MAIN . LPAREN RPAREN statement

    LPAREN          shift and go to state 4


state 4

    (1) mainFunc -> INT MAIN LPAREN . RPAREN statement

    RPAREN          shift and go to state 5


state 5

    (1) mainFunc -> INT MAIN LPAREN RPAREN . statement
    (87) statement -> . labeledStatement
    (88) statement -> . expressionStatement
    (89) statement -> . compoundStatement
    (90) statement -> . selectionStatement
    (91) statement -> . jumpStatement
    (92) labeledStatement -> . identifier COLON statement
    (93) labeledStatement -> . caseList default
    (101) expressionStatement -> . expression TERMINAL
    (102) expressionStatement -> . empty
    (103) compoundStatement -> . oscope declarationList statementList cscope
    (104) compoundStatement -> . empty
    (143) selectionStatement -> . IF LPAREN ifmark expression RPAREN statement endifmark
    (144) selectionStatement -> . IF LPAREN ifmark expression RPAREN statement endifmark ELSE elsemark statement
    (145) selectionStatement -> . SWITCH LPAREN switchmark expression RPAREN statement endswitchmark
    (151) jumpStatement -> . BREAK TERMINAL
    (152) jumpStatement -> . CONTINUE TERMINAL
    (153) jumpStatement -> . RETURN expression TERMINAL
    (154) jumpStatement -> . RETURN TERMINAL
    (155) jumpStatement -> . GOTO identifier TERMINAL
    (132) identifier -> . ID
    (94) caseList -> . caseList CASE constantExpression COLON statement
    (95) caseList -> . empty
    (2) expression -> . assignmentExpression
    (3) expression -> . expression COMMA assignmentExpression
    (86) empty -> .
    (105) oscope -> . LEFTCURLYBRACKET
    (4) assignmentExpression -> . conditionalExpression
    (5) assignmentExpression -> . unaryExpression assignOper assignmentExpression
    (39) conditionalExpression -> . logicalOrExpression
    (40) conditionalExpression -> . logicalOrExpression QUES_MARK expression COLON conditionalExpression
    (6) unaryExpression -> . postfixExpression
    (7) unaryExpression -> . PLUSPLUS unaryExpression
    (8) unaryExpression -> . MINUSMINUS unaryExpression
    (9) unaryExpression -> . unaryOper unaryExpression
    (10) unaryExpression -> . SIZEOF unaryExpression
    (11) unaryExpression -> . SIZEOF LPAREN simpleTypeName RPAREN
    (41) logicalOrExpression -> . logicalAndExpression
    (42) logicalOrExpression -> . logicalOrExpression OR logicalAndExpression
    (18) postfixExpression -> . primaryExpression
    (19) postfixExpression -> . postfixExpression LEFTSQRBRACKET expression RIGHTSQRBRACKET
    (20) postfixExpression -> . postfixExpression PLUSPLUS
    (21) postfixExpression -> . postfixExpression MINUSMINUS
    (71) unaryOper -> . TIMES
    (72) unaryOper -> . BIT_AND
    (73) unaryOper -> . U_PLUS
    (74) unaryOper -> . U_MINUS
    (75) unaryOper -> . NOT
    (76) unaryOper -> . BIT_NOT
    (43) logicalAndExpression -> . inclusiveOrExpression
    (44) logicalAndExpression -> . logicalAndExpression AND inclusiveOrExpression
    (12) primaryExpression -> . markid
    (13) primaryExpression -> . constant
    (14) primaryExpression -> . markstr STRING
    (15) primaryExpression -> . LPAREN expression RPAREN
    (45) inclusiveOrExpression -> . exclusiveOrExpression
    (46) inclusiveOrExpression -> . inclusiveOrExpression BIT_OR exclusiveOrExpression
    (16) markid -> . identifier
    (22) constant -> . markint INTNUM
    (23) constant -> . markfloat FLOATNUM
    (24) constant -> . markchar CHAR_CONST
    (17) markstr -> .
    (47) exclusiveOrExpression -> . andExpression
    (48) exclusiveOrExpression -> . exclusiveOrExpression BIT_XOR andExpression
    (25) markint -> . empty
    (26) markfloat -> . empty
    (27) markchar -> . empty
    (49) andExpression -> . equalityExpression
    (50) andExpression -> . andExpression BIT_AND equalityExpression
    (51) equalityExpression -> . relationalExpression
    (52) equalityExpression -> . equalityExpression EQUAL relationalExpression
    (53) equalityExpression -> . equalityExpression NEQUAL relationalExpression
    (54) relationalExpression -> . shiftExpression
    (55) relationalExpression -> . relationalExpression LT shiftExpression
    (56) relationalExpression -> . relationalExpression GT shiftExpression
    (57) relationalExpression -> . relationalExpression LTEQ shiftExpression
    (58) relationalExpression -> . relationalExpression GTEQ shiftExpression
    (59) shiftExpression -> . additiveExpression
    (60) shiftExpression -> . shiftExpression LSHIFT additiveExpression
    (61) shiftExpression -> . shiftExpression RSHIFT additiveExpression
    (62) additiveExpression -> . multiplicativeExpression
    (63) additiveExpression -> . additiveExpression U_PLUS multiplicativeExpression
    (64) additiveExpression -> . additiveExpression U_MINUS multiplicativeExpression
    (65) multiplicativeExpression -> . castExpression
    (66) multiplicativeExpression -> . multiplicativeExpression TIMES castExpression
    (67) multiplicativeExpression -> . multiplicativeExpression DIVIDE castExpression
    (68) multiplicativeExpression -> . multiplicativeExpression MOD castExpression
    (69) castExpression -> . unaryExpression
    (70) castExpression -> . LPAREN simpleTypeName RPAREN castExpression

    IF              shift and go to state 18
    SWITCH          shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    RETURN          shift and go to state 22
    GOTO            shift and go to state 23
    ID              shift and go to state 24
    $end            reduce using rule 86 (empty -> .)
    CASE            reduce using rule 86 (empty -> .)
    DEFAULT         reduce using rule 86 (empty -> .)
    INTNUM          reduce using rule 86 (empty -> .)
    FLOATNUM        reduce using rule 86 (empty -> .)
    CHAR_CONST      reduce using rule 86 (empty -> .)
    LEFTCURLYBRACKET shift and go to state 26
    PLUSPLUS        shift and go to state 31
    MINUSMINUS      shift and go to state 32
    SIZEOF          shift and go to state 34
    TIMES           shift and go to state 37
    BIT_AND         shift and go to state 38
    U_PLUS          shift and go to state 39
    U_MINUS         shift and go to state 40
    NOT             shift and go to state 41
    BIT_NOT         shift and go to state 42
    LPAREN          shift and go to state 6
    STRING          reduce using rule 17 (markstr -> .)

    statement                      shift and go to state 7
    labeledStatement               shift and go to state 8
    expressionStatement            shift and go to state 9
    compoundStatement              shift and go to state 10
    selectionStatement             shift and go to state 11
    jumpStatement                  shift and go to state 12
    identifier                     shift and go to state 13
    caseList                       shift and go to state 14
    expression                     shift and go to state 15
    empty                          shift and go to state 16
    oscope                         shift and go to state 17
    assignmentExpression           shift and go to state 25
    conditionalExpression          shift and go to state 27
    unaryExpression                shift and go to state 28
    logicalOrExpression            shift and go to state 29
    postfixExpression              shift and go to state 30
    unaryOper                      shift and go to state 33
    logicalAndExpression           shift and go to state 35
    primaryExpression              shift and go to state 36
    inclusiveOrExpression          shift and go to state 43
    markid                         shift and go to state 44
    constant                       shift and go to state 45
    markstr                        shift and go to state 46
    exclusiveOrExpression          shift and go to state 47
    markint                        shift and go to state 48
    markfloat                      shift and go to state 49
    markchar                       shift and go to state 50
    andExpression                  shift and go to state 51
    equalityExpression             shift and go to state 52
    relationalExpression           shift and go to state 53
    shiftExpression                shift and go to state 54
    additiveExpression             shift and go to state 55
    multiplicativeExpression       shift and go to state 56
    castExpression                 shift and go to state 57

state 6

    (15) primaryExpression -> LPAREN . expression RPAREN
    (70) castExpression -> LPAREN . simpleTypeName RPAREN castExpression
    (2) expression -> . assignmentExpression
    (3) expression -> . expression COMMA assignmentExpression
    (77) simpleTypeName -> . CHAR
    (78) simpleTypeName -> . SHORT
    (79) simpleTypeName -> . INT
    (80) simpleTypeName -> . LONG
    (81) simpleTypeName -> . SIGNED
    (82) simpleTypeName -> . UNSIGNED
    (83) simpleTypeName -> . FLOAT
    (84) simpleTypeName -> . DOUBLE
    (85) simpleTypeName -> . VOID
    (4) assignmentExpression -> . conditionalExpression
    (5) assignmentExpression -> . unaryExpression assignOper assignmentExpression
    (39) conditionalExpression -> . logicalOrExpression
    (40) conditionalExpression -> . logicalOrExpression QUES_MARK expression COLON conditionalExpression
    (6) unaryExpression -> . postfixExpression
    (7) unaryExpression -> . PLUSPLUS unaryExpression
    (8) unaryExpression -> . MINUSMINUS unaryExpression
    (9) unaryExpression -> . unaryOper unaryExpression
    (10) unaryExpression -> . SIZEOF unaryExpression
    (11) unaryExpression -> . SIZEOF LPAREN simpleTypeName RPAREN
    (41) logicalOrExpression -> . logicalAndExpression
    (42) logicalOrExpression -> . logicalOrExpression OR logicalAndExpression
    (18) postfixExpression -> . primaryExpression
    (19) postfixExpression -> . postfixExpression LEFTSQRBRACKET expression RIGHTSQRBRACKET
    (20) postfixExpression -> . postfixExpression PLUSPLUS
    (21) postfixExpression -> . postfixExpression MINUSMINUS
    (71) unaryOper -> . TIMES
    (72) unaryOper -> . BIT_AND
    (73) unaryOper -> . U_PLUS
    (74) unaryOper -> . U_MINUS
    (75) unaryOper -> . NOT
    (76) unaryOper -> . BIT_NOT
    (43) logicalAndExpression -> . inclusiveOrExpression
    (44) logicalAndExpression -> . logicalAndExpression AND inclusiveOrExpression
    (12) primaryExpression -> . markid
    (13) primaryExpression -> . constant
    (14) primaryExpression -> . markstr STRING
    (15) primaryExpression -> . LPAREN expression RPAREN
    (45) inclusiveOrExpression -> . exclusiveOrExpression
    (46) inclusiveOrExpression -> . inclusiveOrExpression BIT_OR exclusiveOrExpression
    (16) markid -> . identifier
    (22) constant -> . markint INTNUM
    (23) constant -> . markfloat FLOATNUM
    (24) constant -> . markchar CHAR_CONST
    (17) markstr -> .
    (47) exclusiveOrExpression -> . andExpression
    (48) exclusiveOrExpression -> . exclusiveOrExpression BIT_XOR andExpression
    (132) identifier -> . ID
    (25) markint -> . empty
    (26) markfloat -> . empty
    (27) markchar -> . empty
    (49) andExpression -> . equalityExpression
    (50) andExpression -> . andExpression BIT_AND equalityExpression
    (86) empty -> .
    (51) equalityExpression -> . relationalExpression
    (52) equalityExpression -> . equalityExpression EQUAL relationalExpression
    (53) equalityExpression -> . equalityExpression NEQUAL relationalExpression
    (54) relationalExpression -> . shiftExpression
    (55) relationalExpression -> . relationalExpression LT shiftExpression
    (56) relationalExpression -> . relationalExpression GT shiftExpression
    (57) relationalExpression -> . relationalExpression LTEQ shiftExpression
    (58) relationalExpression -> . relationalExpression GTEQ shiftExpression
    (59) shiftExpression -> . additiveExpression
    (60) shiftExpression -> . shiftExpression LSHIFT additiveExpression
    (61) shiftExpression -> . shiftExpression RSHIFT additiveExpression
    (62) additiveExpression -> . multiplicativeExpression
    (63) additiveExpression -> . additiveExpression U_PLUS multiplicativeExpression
    (64) additiveExpression -> . additiveExpression U_MINUS multiplicativeExpression
    (65) multiplicativeExpression -> . castExpression
    (66) multiplicativeExpression -> . multiplicativeExpression TIMES castExpression
    (67) multiplicativeExpression -> . multiplicativeExpression DIVIDE castExpression
    (68) multiplicativeExpression -> . multiplicativeExpression MOD castExpression
    (69) castExpression -> . unaryExpression
    (70) castExpression -> . LPAREN simpleTypeName RPAREN castExpression

    CHAR            shift and go to state 60
    SHORT           shift and go to state 61
    INT             shift and go to state 62
    LONG            shift and go to state 63
    SIGNED          shift and go to state 64
    UNSIGNED        shift and go to state 65
    FLOAT           shift and go to state 66
    DOUBLE          shift and go to state 67
    VOID            shift and go to state 68
    PLUSPLUS        shift and go to state 31
    MINUSMINUS      shift and go to state 32
    SIZEOF          shift and go to state 34
    TIMES           shift and go to state 37
    BIT_AND         shift and go to state 38
    U_PLUS          shift and go to state 39
    U_MINUS         shift and go to state 40
    NOT             shift and go to state 41
    BIT_NOT         shift and go to state 42
    LPAREN          shift and go to state 6
    STRING          reduce using rule 17 (markstr -> .)
    ID              shift and go to state 24
    INTNUM          reduce using rule 86 (empty -> .)
    FLOATNUM        reduce using rule 86 (empty -> .)
    CHAR_CONST      reduce using rule 86 (empty -> .)

    expression                     shift and go to state 58
    simpleTypeName                 shift and go to state 59
    castExpression                 shift and go to state 57
    assignmentExpression           shift and go to state 25
    conditionalExpression          shift and go to state 27
    unaryExpression                shift and go to state 28
    logicalOrExpression            shift and go to state 29
    postfixExpression              shift and go to state 30
    unaryOper                      shift and go to state 33
    logicalAndExpression           shift and go to state 35
    primaryExpression              shift and go to state 36
    inclusiveOrExpression          shift and go to state 43
    markid                         shift and go to state 44
    constant                       shift and go to state 45
    markstr                        shift and go to state 46
    exclusiveOrExpression          shift and go to state 47
    identifier                     shift and go to state 69
    markint                        shift and go to state 48
    markfloat                      shift and go to state 49
    markchar                       shift and go to state 50
    andExpression                  shift and go to state 51
    empty                          shift and go to state 70
    equalityExpression             shift and go to state 52
    relationalExpression           shift and go to state 53
    shiftExpression                shift and go to state 54
    additiveExpression             shift and go to state 55
    multiplicativeExpression       shift and go to state 56

state 7

    (1) mainFunc -> INT MAIN LPAREN RPAREN statement .

    $end            reduce using rule 1 (mainFunc -> INT MAIN LPAREN RPAREN statement .)


state 8

    (87) statement -> labeledStatement .

    $end            reduce using rule 87 (statement -> labeledStatement .)
    RIGHTCURLYBRACKET reduce using rule 87 (statement -> labeledStatement .)
    IF              reduce using rule 87 (statement -> labeledStatement .)
    SWITCH          reduce using rule 87 (statement -> labeledStatement .)
    BREAK           reduce using rule 87 (statement -> labeledStatement .)
    CONTINUE        reduce using rule 87 (statement -> labeledStatement .)
    RETURN          reduce using rule 87 (statement -> labeledStatement .)
    GOTO            reduce using rule 87 (statement -> labeledStatement .)
    ID              reduce using rule 87 (statement -> labeledStatement .)
    LEFTCURLYBRACKET reduce using rule 87 (statement -> labeledStatement .)
    PLUSPLUS        reduce using rule 87 (statement -> labeledStatement .)
    MINUSMINUS      reduce using rule 87 (statement -> labeledStatement .)
    SIZEOF          reduce using rule 87 (statement -> labeledStatement .)
    TIMES           reduce using rule 87 (statement -> labeledStatement .)
    BIT_AND         reduce using rule 87 (statement -> labeledStatement .)
    U_PLUS          reduce using rule 87 (statement -> labeledStatement .)
    U_MINUS         reduce using rule 87 (statement -> labeledStatement .)
    NOT             reduce using rule 87 (statement -> labeledStatement .)
    BIT_NOT         reduce using rule 87 (statement -> labeledStatement .)
    LPAREN          reduce using rule 87 (statement -> labeledStatement .)
    CASE            reduce using rule 87 (statement -> labeledStatement .)
    DEFAULT         reduce using rule 87 (statement -> labeledStatement .)
    STRING          reduce using rule 87 (statement -> labeledStatement .)
    INTNUM          reduce using rule 87 (statement -> labeledStatement .)
    FLOATNUM        reduce using rule 87 (statement -> labeledStatement .)
    CHAR_CONST      reduce using rule 87 (statement -> labeledStatement .)
    ELSE            reduce using rule 87 (statement -> labeledStatement .)


state 9

    (88) statement -> expressionStatement .

    $end            reduce using rule 88 (statement -> expressionStatement .)
    RIGHTCURLYBRACKET reduce using rule 88 (statement -> expressionStatement .)
    IF              reduce using rule 88 (statement -> expressionStatement .)
    SWITCH          reduce using rule 88 (statement -> expressionStatement .)
    BREAK           reduce using rule 88 (statement -> expressionStatement .)
    CONTINUE        reduce using rule 88 (statement -> expressionStatement .)
    RETURN          reduce using rule 88 (statement -> expressionStatement .)
    GOTO            reduce using rule 88 (statement -> expressionStatement .)
    ID              reduce using rule 88 (statement -> expressionStatement .)
    LEFTCURLYBRACKET reduce using rule 88 (statement -> expressionStatement .)
    PLUSPLUS        reduce using rule 88 (statement -> expressionStatement .)
    MINUSMINUS      reduce using rule 88 (statement -> expressionStatement .)
    SIZEOF          reduce using rule 88 (statement -> expressionStatement .)
    TIMES           reduce using rule 88 (statement -> expressionStatement .)
    BIT_AND         reduce using rule 88 (statement -> expressionStatement .)
    U_PLUS          reduce using rule 88 (statement -> expressionStatement .)
    U_MINUS         reduce using rule 88 (statement -> expressionStatement .)
    NOT             reduce using rule 88 (statement -> expressionStatement .)
    BIT_NOT         reduce using rule 88 (statement -> expressionStatement .)
    LPAREN          reduce using rule 88 (statement -> expressionStatement .)
    CASE            reduce using rule 88 (statement -> expressionStatement .)
    DEFAULT         reduce using rule 88 (statement -> expressionStatement .)
    STRING          reduce using rule 88 (statement -> expressionStatement .)
    INTNUM          reduce using rule 88 (statement -> expressionStatement .)
    FLOATNUM        reduce using rule 88 (statement -> expressionStatement .)
    CHAR_CONST      reduce using rule 88 (statement -> expressionStatement .)
    ELSE            reduce using rule 88 (statement -> expressionStatement .)


state 10

    (89) statement -> compoundStatement .
